Bug 67990 - EDITING: Combobox: upper-case character is ignored, when there is a word with same lower-case character
Summary: EDITING: Combobox: upper-case character is ignored, when there is a word with...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium minor
Assignee: Julien Nabet
URL:
Whiteboard: target:4.5.0 target:4.4.3
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-11 10:58 UTC by Robert Großkopf
Modified: 2015-10-08 14:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Form with a combobox. Try the input "Start" for the second row. (10.37 KB, application/vnd.oasis.opendocument.base)
2013-08-11 10:58 UTC, Robert Großkopf
Details
bt (4.51 KB, text/plain)
2015-03-15 14:42 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-08-11 10:58:05 UTC
Created attachment 83930 [details]
Form with a combobox. Try the input "Start" for the second row.

I have created a form with a combobox. The combobox is filled by SQL. There is, for example, a text "start". Then it is impossible to input a new value, which begins with a upper-case "S", for example "Start".

This doesn't work since the beginning of LO.
Comment 1 pierre-yves samyn 2014-01-25 16:40:21 UTC
Hello

I still reproduce on windows 7/64 with Version: 4.2.0.3
Build ID: c63c03decdf780d8fb80823950665b782ec9ecd0

Of course, the opposite is also true  (if Start is in the first row and you want to input start).

Another workaround: to enter "Start" begin the word with another letter, e.g. "btart", replace b by S and quit the control (don't type the End key)

I set status to New...

Regards
Pierre-Yves
Comment 2 Alex Thurgood 2015-01-03 17:40:27 UTC
Adding self to CC if not already on
Comment 3 Julien Nabet 2015-03-15 14:42:39 UTC
Created attachment 114105 [details]
bt

I'm trying to pinpoint the very moment where the comparison is made but only got this.
A value which begins with "s" appeared in bt whereas I had typed "S"
Comment 4 Commit Notification 2015-03-26 14:15:11 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=76f33f10309b0ee384a75a7a854858b068d60495

tdf#67990: Management of case in combobox

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-03-26 14:21:56 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6e36fc0cb769c2173e07af764ddc52e02cf8c9ba&h=libreoffice-4-4

tdf#67990: Management of case in combobox

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2015-03-26 14:33:06 UTC
Since it's not a crash, I haven't cherry-picked it for 4.3 branch.