tdf#67990: Management of case in combobox

I noticed these 2 points:
1) Combobox were used with autocomplete with default (false) value for matchCase
=> so initialize autocomplete with true value for matchCase
2) FindMatchingEntry uses bLazy as !matchCase
but when bLazy = false, no autocomplete can work since you must type the whole word
so just use "entryCombo" startsWith "typed string" instead of "entryCombo" == "typed string"

(thank you Lionel for this tip: http://nabble.documentfoundation.org/Finding-the-right-location-for-tdf-67990-Base-module-td4143324.html)

Change-Id: Ib1063002c3284122fd5279f27c1ccbc177bbac7c